Add Forge, compile for 1.21.1